Introduce -Wcoverage-invalid-line-number

PR gcov-profile/100788

gcc/ChangeLog:

	* common.opt: Add new option.
	* coverage.c (coverage_begin_function): Emit warning instead on
	the internal compiler error.
	* doc/invoke.texi: Document the option.
	* toplev.c (process_options): Enable it by default.

gcc/testsuite/ChangeLog:

	* gcc.dg/pr100788.c: New test.